# ngd-workshops

./: .gitmodules  README.md
CMakeWorkshop/: README.md
CMakeWorkshop/primer_ejercicio/: CMakeLists.txt  fix_validity.py
CMakeWorkshop/primer_ejercicio/bar_lib/: CMakeLists.txt
CMakeWorkshop/primer_ejercicio/bar_lib/include/: unity.h
CMakeWorkshop/primer_ejercicio/bar_lib/src/: unity.cpp
CMakeWorkshop/primer_ejercicio/foo_lib/: CMakeLists.txt
CMakeWorkshop/primer_ejercicio/foo_lib/include/: magic.h
CMakeWorkshop/primer_ejercicio/foo_lib/src/: magic.cpp
CMakeWorkshop/primer_ejercicio/include/: consumer.h
CMakeWorkshop/primer_ejercicio/src/: consumer.cpp  consumer_fixed.cpp  main.cpp
Materials_workshop/: MI_Tank.uasset  M_Tank.uasset  M_Tank2.uasset  SM_Tank.uasset  SM_Tank_PhysicsAsset.uasset  SM_Tank_Skeleton.uasset  T_Checkers_Random_x10_M.uasset  T_SoftNoise_01_M.uasset  T_Tank_M.uasset  T_Tank_RMA.uasset  T_TrianglePattern_02_M.uasset  T_Wind.uasset  T_Wind_N.uasset
ShaderWorkshop/: .gitignore
ShaderWorkshop/res/shaders/: shader.fs  shader.vs
ShaderWorkshop/src/: main.cpp
WaveFunctionCollapseCpp/include/: utils.h  wfc.h
